Fix intro strip z-index conflicts

--- a/source_assets/styles/_base.scss
+++ b/source_assets/styles/_base.scss
@@ -552,6 +552,7 @@ a:active{
     position: relative;
     overflow: hidden;
     height: 16rem;
+    z-index: 1;
     .row--contained {
       position: absolute;
       top: 0;
